layout fix for orders cards overflow

--- a/app/assets/stylesheets/base/_basic.scss
+++ b/app/assets/stylesheets/base/_basic.scss
@@ -200,9 +200,6 @@ dl {
 }
 
 .options {
-	z-index: 20;
-  position: relative;
-
   .options-btn {
     img {
       width: 16px;
